--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,11 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
+      - name: Debug - List files
+        run: |
+          ls -la
+          ls -la pnpm-lock.yaml || echo "pnpm-lock.yaml not found"
+          pwd
       - name: Setup pnpm
         uses: pnpm/action-setup@v2
         with:
