--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
+    "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run lint && npm run test && npm run typecheck",
     "prepare": "husky"
   },
