--- a/package.json
+++ b/package.json
@@ -36,7 +36,10 @@
     "test:coverage": "jest --coverage",
     "typecheck": "tsc --noEmit",
     "prepublishOnly": "npm run lint && npm run test && npm run typecheck",
-    "prepare": "husky"
+    "prepare": "husky",
+    "version:patch": "npm version patch",
+    "version:minor": "npm version minor",
+    "version:major": "npm version major"
   },
   "peerDependencies": {
     "react": ">= 16.8.0",
