--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "prepublishOnly": "npm run lint && npm run test && npm run typecheck",
     "prepare": "husky",
     "version:patch": "npm version patch",
-    "version:minor": "npm version minor",
-    "version:major": "npm version major"
+    "version:minor": "npm version minor"
   },
   "peerDependencies": {
     "react": ">= 16.8.0",
