--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -39,14 +39,11 @@ jobs:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
 
       - name: Create Github Release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+        uses: softprops/action-gh-release@v1
         with:
-          tag_name: ${{github.ref_name}}
-          release_name: Release ${{github.ref_name}}
+          name: Release ${{github.ref_name}}
           body: |
-            Changes in this Release
-            - First Release
+            ## Changes in ${{ github.ref_name }}
+            - Fixing CI/CD release workflow
           draft: false
           prerelease: false
